--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
     "description": "Core features of ESLintME",
     "main": "index.js",
     "dependencies": {
+        "@types/esprima": "^4.0.3",
+        "esprima": "^4.0.1",
         "jest": "^27.2.5",
         "ts-jest": "^27.0.5",
         "typescript": "^4.4.4"
