--- a/package.json
+++ b/package.json
@@ -8,11 +8,10 @@
         "esprima": "^4.0.1",
         "jest": "^27.2.5",
         "ts-jest": "^27.0.5",
-        "typescript": "^4.4.4"
-    },
-    "devDependencies": {
+        "typescript": "^4.4.4",
         "@types/jest": "^27.0.2"
     },
+    "devDependencies": {},
     "scripts": {
         "test": "jest",
         "coverage": "jest --coverage"
