--- a/package.json
+++ b/package.json
@@ -5,13 +5,16 @@
     "main": "index.js",
     "dependencies": {
         "@types/esprima": "^4.0.3",
+        "@types/jest": "^27.0.2",
         "esprima": "^4.0.1",
         "jest": "^27.2.5",
+        "js-yaml": "^4.1.0",
         "ts-jest": "^27.0.5",
-        "typescript": "^4.4.4",
-        "@types/jest": "^27.0.2"
+        "typescript": "^4.4.4"
     },
-    "devDependencies": {},
+    "devDependencies": {
+        "@types/js-yaml": "^4.0.5"
+    },
     "scripts": {
         "test": "jest",
         "coverage": "jest --coverage"
